--- a/publiccode.yml
+++ b/publiccode.yml
@@ -1,5 +1,6 @@
 publiccodeYmlVersion: "0.2"
 name: Airstation
+applicationSuite: Airstation
 url: "https://github.com/regione-piemonte/airstation"
 softwareVersion: "4.1.0" 
 releaseDate: "2021-12-10"
