--- a/publiccode.yml
+++ b/publiccode.yml
@@ -60,6 +60,8 @@ description:
        - screenshoots/9_configurazione_schede.png
        - screenshoots/10_caricamento_configurazioni.png
 legal:
+  authorsFile: |-
+    https://raw.githubusercontent.com/regione-piemonte/airstation/master/Copyrights.txt
   license: EUPL-1.2
   mainCopyrightOwner: Regione Piemonte
   repoOwner: Regione Piemonte
